# python-gcp-template

./: .gitignore  CLAUDE.md  Dockerfile  README.md  WORKFLOW.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/my_app/: __init__.py  main.py
tests/: test_main.py
